Fix font bleeding

--- a/gnome-shell/calendar.css
+++ b/gnome-shell/calendar.css
@@ -19,7 +19,7 @@
 }
 
 .calendar-month-label {
-    font-size: 0.875em;
+    font-size: 0.917em;
     padding: .25em;
     font-weight: normal;
 }
@@ -65,7 +65,7 @@
 }
 
 .calendar-day-base {
-    font-size: 0.75em;
+    font-size: 0.917em;
     text-align: center;
     width: 2.5em;
     height: 2.5em;
@@ -143,7 +143,7 @@
 }
 
 .events-day-dayname {
-    font-size: 0.875em;
+    font-size: 1em;
     color: #FFF9F2;
     text-align: left;
 }
@@ -153,7 +153,7 @@
 }
 
 .events-day-time {
-    font-size: 0.875em;
+    font-size: 1em;
     color: #FFF9F2;
     text-align: right;
 }
@@ -163,7 +163,7 @@
 }
 
 .events-day-task {
-    font-size: 0.875em;
+    font-size: 1em;
     color: rgba(255, 249, 242, .8);
 }
 
