--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -11,7 +11,7 @@
 
 stage {
     font-family: "DejaVu Sans", sans-serif;
-    font-size: 10pt;
+    font-size: 12px;
     color: #FFF9F2;
 }
 
