--- a/gnome-shell/looking-glass.css
+++ b/gnome-shell/looking-glass.css
@@ -12,7 +12,7 @@
 #LookingGlassDialog .notebook-tab {
     -natural-hpadding: 5px;
     -minimum-hpadding: 5px;
-    font-size: .85em;
+    font-size: .833em;
     padding: .5em;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .lg-completions-text {
-    font-size: .9em;
+    font-size: .917em;
     font-style: italic;
 }
 
@@ -76,7 +76,7 @@
 .lg-extension-meta {
     spacing: .5em;
     padding-top: .25em;
-    font-size: .85em;
+    font-size: .917em;
 }
 
 #LookingGlassPropertyInspector {
